k8s-deployments/05-preview-environments/overlays/preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preview-environment
spec:
  ports:
    - name: http
      port: 80
      #nodePort: 9013
      protocol: TCP
      targetPort: 80
